--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To here!</div>
                 <div class="masthead-heading text-uppercase">test test</div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
             </div>
         </header>
         <!-- About-->
@@ -55,6 +55,20 @@
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                            <ul class="list-inline dev-icons">
+                   <li class="list-inline-item">
+                    <img src="assets/img/BB.png" alt="baseball">
+                    </li>
+                   <li class="list-inline-item">
+                    <img src="assets/img/Badminton.png" alt="badminton">
+                    </li>
+                    <li class="list-inline-item">
+                    <img src="assets/img/Volleyball.png" alt="volleyball">
+                    </li>
+                   <li class="list-inline-item">
+                    <img src="assets/img/bicycle.png" alt="bicycle">
+               </li>
+              </ul>
                         </span>
                         <h4 class="my-3">E-Commerce</h4>
                         <p class="text-muted">測試</p>
@@ -246,28 +260,8 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-                            <h4>Kay Garland</h4>
+                            <h4>Melissa Liu</h4>
                             <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                            <h4>Larry Parker</h4>
-                            <p class="text-muted">Lead Marketer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                            <h4>Diana Petersen</h4>
-                            <p class="text-muted">Lead Developer</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
