--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">測試</p>
+                        <p class="text-muted">測試orem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
