--- a/index.html
+++ b/index.html
@@ -237,21 +237,23 @@
         </section>
         <!-- Team-->
         <section class="page-section bg-light" id="team">
-            <div class="center">
+            <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
+                    <div class="conter">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-                            <h4>Melissa Liu</h4>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="liu" />
+                            <h4>Shanglin Liu</h4>
                             <p class="text-muted">Lead Designer</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         </div>
+                      </div>
                     </div>
                 </div>
                 <div class="row">
