--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Feature</h4>
-                        <p class="text-muted">客製化資訊：依照不同風格提供專屬對應的資訊</p>
+                        <p class="text-muted">客製化資訊：依照不同風格提供專屬對應的資訊。</p>
                     </div>
                 </div>
             </div>
@@ -245,7 +245,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
-                    <div class="conter">
+                    <div class="center">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="liu" />
                             <h4>Shanglin Liu</h4>
