--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
-                    <div class="center">
+                    <div class="content">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="liu" />
                             <h4>Shanglin Liu</h4>
