--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To here!</div>
-                <div class="masthead-heading text-uppercase">test test</div>
+                <div class="masthead-subheading">Welcome To Here!</div>
+                <div class="masthead-heading text-uppercase">Blue Cafe</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
             </div>
         </header>
