--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Here!</div>
                 <div class="masthead-heading text-uppercase">Blue Cafe</div>
+                <a href="untitled text 6.html" target="_parent">在父層開啟</a>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
             </div>
         </header>
@@ -48,8 +49,8 @@
         <section class="page-section" id="service">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Service</h2>
+                    <h3 class="section-subheading text-muted">我們提供的服務</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
