--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Here!</div>
                 <div class="masthead-heading text-uppercase">Blue Cafe</div>
-                <a href="untitled text 6.html" target="_parent">在父層開啟</a>
+                <a href="11test.html" target="_parent">在父層開啟</a>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
             </div>
         </header>
