--- a/11test.html
+++ b/11test.html
@@ -22,8 +22,8 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">11 Cafe’</h2>
+                    <h3 class="section-subheading text-muted">提供商業午餐、不收服務費的寵物友善餐廳</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
