--- a/11test.html
+++ b/11test.html
@@ -31,6 +31,8 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                                 
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
                                 <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
