--- a/index.html
+++ b/index.html
@@ -339,12 +339,8 @@
                                     <h2 class="text-uppercase">南港-信義</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="..." />
-                                    <p>11 cafe'<a href="11test.html" target="_parent">在父層開啟/a></p>
-                                    <ul class="list-inline">
-                                        <li>Date: January 2021</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul>
+                                    <p>11 cafe'<a href="11test.html" target="_parent">link</p>
+                                
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Close Project
