--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">南港-信義</h2>
                                     <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                    <img src="assets/img/portfolio/01-full.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="..." />
                                     <p>11 cafe'<a href="11cafe'.html" target="_parent">link</p>
                                 
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
