--- a/11cafe'.html
+++ b/11cafe'.html
@@ -34,11 +34,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/11_1.jpeg" alt="11_1" />
+                                <img class="img-fluid" src="assets/img/store/11_1.jpeg" alt="11_1" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">南港-信義</div>
-                                <div class="portfolio-caption-subheading text-muted">南港展覽館站-市政府站</div>
+                                <div class="portfolio-caption-subheading text-muted">店內有許多貓咪擺飾</div>
                             </div>
                         </div>
                     </div>
@@ -48,11 +47,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/11_2.jpg" alt="11_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">信義-萬華</div>
-                                <div class="portfolio-caption-subheading text-muted">國父紀念館站-台北車站</div>
+                                <div class="portfolio-caption-subheading text-muted">草莓優格冰沙</div>
                             </div>
                         </div>
                     </div>
@@ -65,7 +63,6 @@
                                 <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
                                 <div class="portfolio-caption-subheading text-muted">Identity</div>
                             </div>
                         </div>
