--- a/11cafe'.html
+++ b/11cafe'.html
@@ -47,7 +47,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/store/11_2.jpg" alt="11_2" />
+                                <img class="img-fluid" src="assets/img/store/11_2.jpeg" alt="11_2" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-subheading text-muted">草莓優格冰沙</div>
