--- a/11cafe'.html
+++ b/11cafe'.html
@@ -50,7 +50,7 @@
                                 <img class="img-fluid" src="assets/img/store/11_2.jpeg" alt="11_2" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">草莓優格冰沙</div>
+                                <div class="portfolio-caption-subheading text-muted">巴東咖哩牛肉蛋奶麵</div>
                             </div>
                         </div>
                     </div>
@@ -60,10 +60,10 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/store/11_3.jpeg" alt="11_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-subheading text-muted">草莓優格冰沙</div>
                             </div>
                         </div>
                     </div>
