--- a/11cafe'.html
+++ b/11cafe'.html
@@ -71,7 +71,7 @@
                            <p>地址：台北市信義區忠孝東路四段553巷12號</p>
                            <p>電話：(02)8787-5891</p>
                            <p>營業時間：星期二~星期五 11:30~21:00、星期六~星期日 10:30~21:00</p>
-                           <p>菜單：<a href="11_4.jpeg" target="_blank"><img src="11_4.jpeg"></a>
+                           <p>菜單：<a href="11_4.jpeg" target="_blank"><img src="assets/img/store/11_4.jpeg"></a>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：11 Cafe’</p>
                            <p>交通：捷運市政府站1號出口步行約5分鐘即可抵達，鄰近公車站牌為聯合報、松山高中</p>
