--- a/11cafe'.html
+++ b/11cafe'.html
@@ -71,8 +71,10 @@
                            <p>地址：台北市信義區忠孝東路四段553巷12號</p>
                            <p>電話：(02)8787-5891</p>
                            <p>營業時間：星期二~星期五 11:30~21:00、星期六~星期日 10:30~21:00</p>
-                           <p>菜單：<a href="11_4.jpeg" target="_blank"><img src="assets/img/store/11_4.jpeg"></a>
+                           <p>菜單：
                            <p>服務費：不收服務費</p>
-                           <p>粉絲團：11 Cafe’</p>
+                           <p>粉絲團：<a href="https://www.facebook.com/11Cafe" target="_blank">LINK</a></p>
                            <p>交通：捷運市政府站1號出口步行約5分鐘即可抵達，鄰近公車站牌為聯合報、松山高中</p>
+                           <div class="" style="background-image: url(&quot;https://external.ftpe8-2.fna.fbcdn.net/static_map.php?v=2014&amp;osm_provider=2&amp;ccb=4-4&amp;size=466x166&amp;language=zh_TW&amp;scale=2&amp;zoom=14&amp;center=25.046560000000003%2C121.56284&amp;marker_list[0]=25.04256%2C121.56284&quot;); background-repeat: no-repeat; background-size: 100% 100%; height: 166px; width: 466px;">
+                           </div>
                     </div>
