--- a/11cafe.html
+++ b/11cafe.html
@@ -79,5 +79,4 @@
                     </div>
                     
                     <div>
-                    <span> 這是一段文字，我想要強調<span.mark-pen> 這個關鍵字 </span.mark-pen>，強調的效果類似畫上螢光筆</span>
-                    </div>
+                    <p>這是一段文字，我想要強調<span.mark-pen> 這個關鍵字 </span.mark-pen>，強調的效果類似畫上螢光筆</p>
