--- a/11cafe.html
+++ b/11cafe.html
@@ -77,6 +77,4 @@
                            <p>交通：捷運市政府站1號出口步行約5分鐘即可抵達，鄰近公車站牌為聯合報、松山高中</p>
                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.749849032775!2d121.56069431446664!3d25.04256198396832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abb92b2135d1%3A0x6f03f0aea40b892e!2zMTEw5Y-w5YyX5biC5L-h576p5Y2A5b-g5a2d5p2x6Lev5Zub5q61NTUz5be3MTLomZ8!5e0!3m2!1szh-TW!2stw!4v1621844770163!5m2!1szh-TW!2stw" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
-                    
-                    <div>
-                    <p>這是一段文字，我想要強調<span.mark-pen> 這個關鍵字 </span.mark-pen>，強調的效果類似畫上螢光筆</p>
+                    <p>所謂<mark class="yellow">巨量資料(Big Data)</mark>指的是隨著電腦網路與行動裝置的發展，呈現爆炸性成長的多樣化資料。</p>
