--- a/index.html
+++ b/index.html
@@ -340,10 +340,10 @@
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="..." />
                                     <div>
                                     <h4>南港展覽館站</h4>
-                                    <p>Coppii Lumii living Coffe</p>  <p><a href="coppii.html" target="_parent">link</a></p>
+                                    <p>Coppii Lumii living Coffe  <a href="coppii.html" target="_parent">link</a></p>
                                     <div>
                                     <h4>市政府站</h4>
-                                    <p>11 cafe'</p>  <p><a href="11cafe.html" target="_parent">link</a></p>
+                                    <p>11 cafe'  <a href="11cafe.html" target="_parent">link</a></p>
                                     </div>
                                 
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
