--- a/coppii.html
+++ b/coppii.html
@@ -80,6 +80,6 @@
                            <p>菜單：<a href="https://www.facebook.com/CoppiiLumii/menu" target="_blank">LINK</a></p>
                            <p>服務費：不收服務費</p>
                            <p>粉絲團：<a href="https://www.facebook.com/CoppiiLumii/" target="_blank">LINK</a></p>
-                           <p>交通：捷運市政府站1號出口步行約5分鐘即可抵達，鄰近公車站牌為聯合報、松山高中</p>
+                           <p>交通：捷運南港展覽館站站1號出口步行約5分鐘即可抵達</p>
                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.2367511346747!2d121.61239691441627!3d25.059963583960197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442aca648ca6129%3A0x2683aacf361aca13!2zMTE15Y-w5YyX5biC5Y2X5riv5Y2A57aT6LK_5LqM6LevMTk26Jmf!5e0!3m2!1szh-TW!2stw!4v1621862457926!5m2!1szh-TW!2stw" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                            </div>
