--- a/11cafe.html
+++ b/11cafe.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="text-center">
                     <p> <mark class="yellow">＃寵物友善餐廳</mark>  <mark class="yellow">＃創意義大利麵</mark>   <mark class="yellow">＃精緻早午餐</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃免費充電</mark>   <mark class="yellow">＃眯眼小貓陪吃</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">提供插座</mark>   <mark class="yellow">＃眯眼小貓陪吃</mark></p>
                     <p> <mark class="blue">Covid-19專區：5/24起，提供外帶自取全面7折優惠，內用座位暫不開放</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
