--- a/coppii.html
+++ b/coppii.html
@@ -23,11 +23,11 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Coppii Lumii living Coffee</h2>
-                    <h3 class="section-subheading text-muted">Lumii帶著光明的字義，期待Coppii Lumii將為你成就很棒的事！</h3>
+                    <h3 class="section-subheading text-muted">Lumii帶著光明的字義，期待 Coppii Lumii 將為你成就很棒的事！</h3>
                 </div>
                 <div class="text-center">
-                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃</mark></p>
-                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃免費充電</mark>   <mark class="yellow">＃</mark></p>
+                    <p> <mark class="yellow">＃不限時</mark>  <mark class="yellow">＃不收服務費</mark>   <mark class="yellow">＃適合家庭、朋友聚會</mark></p>
+                    <p> <mark class="yellow">＃免費wifi</mark>  <mark class="yellow">＃提供插座</mark>   <mark class="yellow">＃推薦給喜歡探究咖啡的你</mark></p>
                     <p> <mark class="blue">Covid-19專區：每日營業時間為0900–1900，僅提供外帶，暫停內用服務</mark>
                 </div>
                 <section class="page-section bg-light" id="portfolio">
@@ -68,7 +68,7 @@
                                 <img class="img-fluid" src="assets/img/store/coppii_3.jpeg" alt="coppii_3" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-subheading text-muted">今天是卡布其諾的心情</div>
+                                <div class="portfolio-caption-subheading text-muted">213系列濃縮可可與核果的香氣</div>
                             </div>
                         </div>
                     </div>
