--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">信義-萬華</div>
-                                <div class="portfolio-caption-subheading text-muted">國父紀念館站-台北車站</div>
+                                <div class="portfolio-caption-heading">Explore</div>
+                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
                             </div>
                         </div>
                     </div>
