--- a/index.html
+++ b/index.html
@@ -341,6 +341,20 @@
                                     <div>
                                     <h4>南港展覽館站</h4>
                                     <p>Coppii Lumii Living Coffee  <a href="coppii.html" target="_parent">link</a></p>
+                                    </div>
+                                    <div>
+                                    <h4>南港站</h4>
+                                    <p>--------  <a href="---.html" target="_parent">link</a></p>
+                                    </div><div>
+                                    <h4>昆陽站</h4>
+                                    <p>--------  <a href="---.html" target="_parent">link</a></p>
+                                    </div><div>
+                                    <h4>後山埤站</h4>
+                                    <p>--------  <a href="---.html" target="_parent">link</a></p>
+                                    </div><div>
+                                    <h4>永春站</h4>
+                                    <p>--------  <a href="---.html" target="_parent">link</a></p>
+                                    </div>
                                     <div>
                                     <h4>市政府站</h4>
                                     <p>11 cafe'  <a href="11cafe.html" target="_parent">link</a></p>
@@ -368,15 +382,17 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">信義-萬華</h2>
+                                    <p class="item-intro text-muted">捷運國父紀念館站-西門站</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>Date: January 2021</li>
-                                        <li>Client: Explore</li>
-                                        <li>Category: Graphic Design</li>
-                                    </ul>
+                                    <div>
+                                    <h4>國父紀念館站</h4>
+                                    <p>------  <a href="---.html" target="_parent">link</a></p>
+                                    <div>
+                                    <h4>忠孝敦化站</h4>
+                                    <p>------  <a href="---.html" target="_parent">link</a></p>
+                                    </div>
+                                    
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Close Project
@@ -398,8 +414,8 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">萬華-板橋</h2>
+                                    <p class="item-intro text-muted">捷運西門站-捷運府中站</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
@@ -428,8 +444,8 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">板橋-土城</h2>
+                                    <p class="item-intro text-muted">捷運亞東醫院站-捷運頂埔站</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="..." />
                                     <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                     <ul class="list-inline">
