--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                Be Part
+                                
                                 <br />
-                                Of Our
+                                開發中...
                                 <br />
-                                Story!
+                                
                             </h4>
                         </div>
                     </li>
