--- a/index.html
+++ b/index.html
@@ -209,12 +209,10 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" align="absmiddle" alt="暫無圖片" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                            <ul class="align-st">
                                 <h4>早午餐專區</h4>
-                            </ul>
                             </div>
                         </div>
                     </li>
